[package]
name = "wala"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"
license = "GPL-3.0-or-later"
documentation = "https://defalsify.org/doc/crates/wala/0.1.0/wala"
description = "Content-adressed HTTP file server"
repository = "https://git.defalsify.org/wala"
# from https://crates.io/category_slugs
categories = ["web-programming::http-server"]

[[bin]]
name = 'wala_send'
path = 'src/main_send.rs'
required_features = 'client'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "^0.7.0"
env_logger = "^0.9"
log = "^0.4"
sha2 = "^0.10"
hex = "^0.4"
tempfile = "^3.3.0"
mime = "^0.3.13"
ascii = "^1.0.0"
clap = "^2.34.0"
url = "^2.2.2"

[dependencies.tree_magic]
version = "^0.2.3"
features = ["cli"]
optional = true

[dependencies.pgp]
version = "^0.7.2"
optional = true

[dependencies.base64]
version = "^0.13.0"
optional = true

[dependencies.ureq]
version = "^2.5.0" 
optional = true

[dependencies.sequoia-openpgp]
version = "^1.10.0"
optional = true

[features]
pgpauth = ["pgp", "base64"]
dev = []
magic = ["tree_magic"]
meta = []
trace = []
client = ["ureq", "sequoia-openpgp"]
